fix: dispatch qq comments through raw milky forward api